# yalter-bot

./: Cargo.toml
src/: bot.rs  main.rs  module.rs
src/modules/: admin.rs  fun.rs  hello.rs  invite.rs  modules.rs  speedruncom.rs  spotify.rs  wolframalpha.rs  youtube.rs
