[package]
name = "yalter-bot"
version = "0.3.3"
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
build = "build.rs"

[build-dependencies]
serde_codegen = "0.8"

[dependencies]
discord = "0.8.0"
# discord = { path = "../discord-rs/" }
hyper = "0.9"
lazy_static = "0.2"
libc = "0.2"
rand = "0.3"
regex = "0.1"
serde = "0.8"
serde_json = "0.8"
url = { git = "https://github.com/servo/rust-url" }
xml-rs = "0.3"
openssl = "0.7"
